--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,17 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>Archetype - gencode</name>
   <url>http://maven.apache.org</url>
+  <properties> 
+	  <junit.version>4.10</junit.version>  
+	  <log4j.version>2.0</log4j.version>
+	  <slf.log4j.version>1.7.5</slf.log4j.version>    
+	  <mysql.jdbc.version>5.1.21</mysql.jdbc.version>  
+	  <hibernate.version>3.6.9.Final</hibernate.version>  
+	  <commons.fileupload.version>1.2.1</commons.fileupload.version>  
+	  <javassist.version>3.12.1.GA</javassist.version>  
+	  <cxf.version>3.0.2</cxf.version>  
+	  <spring.version>3.2.15.RELEASE</spring.version>  
+  </properties>
   
   <dependencies>
   		<dependency>
@@ -28,6 +39,12 @@
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
 			<version>2.4</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>1.8.3</version>
 		</dependency>
 		
 		<dependency>
@@ -60,5 +77,96 @@
             <artifactId>jgraphx</artifactId>
             <version>3.4.0.3</version>
         </dependency>
+        
+        <!-- 这个jar文件包含Spring框架基本的核心工具类，Spring其它组件要都要使用到这个包里的类，是其它组件的基本核心，当然你也可以在自己的应用系统中使用这些工具类。 -->
+	    <dependency>
+	    	<groupId>org.springframework</groupId>
+	             <artifactId>spring-core</artifactId>
+	             <version>${spring.version}</version>
+	    </dependency>
+	    
+	    <!-- 这个jar文件是所有应用都要用到的，它包含访问配置文件、创建和管理bean以及进行Inversion of Control / Dependency Injection（IoC/DI）操作相关的所有类。如果应用只需基本的IoC/DI支持，引入spring-core.jar及spring-beans.jar文件就可以了。 -->
+		 <dependency>
+		     <groupId>org.springframework</groupId>
+		     <artifactId>spring-beans</artifactId>
+		     <version>${spring.version}</version>
+		 </dependency>
+		 
+		 <!-- 这个jar文件为Spring核心提供了大量扩展。可以找到使用Spring ApplicationContext特性时所需的全部类，JDNI所需的全部类，UI方面的用来与模板（Templating）引擎如Velocity、FreeMarker、JasperReports集成的类，以及校验Validation方面的相关类。 -->
+	    <dependency>
+		     <groupId>org.springframework</groupId>
+		     <artifactId>spring-context</artifactId>
+		     <version>${spring.version}</version>
+		 </dependency>
+		 
+		 <dependency>
+		     <groupId>org.springframework</groupId>
+		     <artifactId>spring-context-support</artifactId>
+		     <version>${spring.version}</version>
+		 </dependency>
+		 
+		 <dependency>
+		     <groupId>org.springframework</groupId>
+		     <artifactId>spring-expression</artifactId>
+		     <version>${spring.version}</version>
+		 </dependency>
+		 
+		 <!-- 这个jar文件包含对Spring对JDBC数据访问进行封装的所有类。 -->
+		 <dependency>
+		     <groupId>org.springframework</groupId>
+		     <artifactId>spring-jdbc</artifactId>
+		     <version>${spring.version}</version>
+		 </dependency>
+		 
+		 <!-- 这个jar文件包含Spring对DAO特性集进行了扩展，使其支持 iBATIS、JDO、OJB、TopLink，因为Hibernate已经独立成包了，现在不包含在这个包里了。这个jar文件里大部分的类都要依赖spring-dao.jar里的类，用这个包时你需要同时包含spring-dao.jar包。 -->
+		 <dependency>
+		     <groupId>org.springframework</groupId>
+		     <artifactId>spring-orm</artifactId>
+		     <version>${spring.version}</version>
+		 </dependency>
+		 
+		 
+		 <!-- 这个jar文件包含在应用中使用Spring的AOP特性时所需的类。使用基于AOP的Spring特性，如声明型事务管理（Declarative Transaction Management），也要在应用里包含这个jar包。 -->
+		 <dependency>
+		     <groupId>org.springframework</groupId>
+		     <artifactId>spring-aop</artifactId>
+		     <version>${spring.version}</version>
+		 </dependency>
+		 
+		 <!-- 这个jar文件包含Spring一整套mock类来辅助应用的测试。Spring测试套件使用了其中大量mock类，这样测试就更加简单。模拟HttpServletRequest和HttpServletResponse类在Web应用单元测试是很方便的。 -->
+		 <dependency>
+		     <groupId>org.springframework</groupId>
+		     <artifactId>spring-test</artifactId>
+		     <version>${spring.version}</version>
+		     <scope>provided</scope>
+		 </dependency>
+		 
+		 <dependency>
+		     <groupId>org.springframework</groupId>
+		     <artifactId>spring-web</artifactId>
+		     <version>${spring.version}</version>
+		 </dependency>
+		 
+		 <!--aspectjweaver包, spring aop需要用到此包, spring4以后有单独的自己的包 -->
+	     <dependency>
+	         <groupId>org.aspectj</groupId>
+	         <artifactId>aspectjweaver</artifactId>
+	         <version>1.8.5</version>
+	     </dependency>
+	     
+	     <!--阿里 Druid数据库连接池包 -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.0.12</version>
+        </dependency>
+        
+        <!-- velocity 模板引擎 -->
+        <dependency>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity</artifactId>
+			<version>1.7</version>
+		</dependency>
+        
   </dependencies>
 </project>
