修正获取properties文件的值

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,1 +1,23 @@
+#base java package name
+basePackageName=me.paddingdun
+
+#service java package name
+servicePackageName=service
+
+#pojo java package name
+pojoPackageName=data
+
+#dao java package name
+daoPackageName=dao
+
+#web action java package name
+webActionPackageName=web.action
+
+pojoFullPackageName=me.padding.data
+daoFullPackageName=me.padding.dao
+serviceFullPackageName=me.padding.service
+webActionFullPackageName=me.padding.web.action
+
+#generate string date property if has java.sql.Date or java.sql.Timestamp
+genStringDate=true
 
