--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,23 +1,9 @@
-#base java package name
-basePackageName=me.paddingdun
 
-#service java package name
-servicePackageName=service
+pojoFullPackageName=com.incito.zhcs.data.typt
 
-#pojo java package name
-pojoPackageName=data
+daoFullPackageName=com.incito.zhcs.service.typt.dao
 
-#dao java package name
-daoPackageName=dao
+serviceFullPackageName=com.incito.zhcs.service.typt
 
-#web action java package name
-webActionPackageName=web.action
 
-pojoFullPackageName=me.padding.data
-daoFullPackageName=me.padding.dao
-serviceFullPackageName=me.padding.service
-webActionFullPackageName=me.padding.web.action
-
-#generate string date property if has java.sql.Date or java.sql.Timestamp
-genStringDate=true
 
