spring mvc action template

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -5,5 +5,7 @@ daoFullPackageName=com.incito.zhcs.service.typt.dao
 
 serviceFullPackageName=com.incito.zhcs.service.typt
 
+webActionFullPackageName=com.incito.zhcs.web.typt
+
 
 
