--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -7,5 +7,26 @@ serviceFullPackageName=com.incito.zhcs.service.typt
 
 webActionFullPackageName=com.incito.zhcs.web.typt
 
+#IDataCollection
+idataCollectionPackageName=com.incito.zhcs.data.paging
+
+#DefaultListDataCollection
+defaultListDataCollectionPackageName=com.incito.zhcs.data.paging.impl
+
+#Paging
+pagingPackageName=com.incito.zhcs.data.paging
+
+#GsonHelper
+gsonHelperPackageName=com.incito.zhcs.util
+
+#JsonResult2
+jsonResultPackageName=com.incito.zhcs.data.json
+
+#BusinessException
+businessExceptionPackageName=com.incito.zhcs.exception
+
+#IErrorCode
+ierrorCodePackageName=com.incito.zhcs.exception
+
 
 
