jsp模板生成器

--- a/pom.xml
+++ b/pom.xml
@@ -193,6 +193,12 @@
 		  <artifactId>google-java-format</artifactId>
 		  <version>0.1-alpha</version>
 		</dependency-->
+		
+		<dependency>   
+	      <groupId>dom4j</groupId>    
+	      <artifactId>dom4j</artifactId>    
+	      <version>1.6.1</version>   
+	    </dependency>
         
   </dependencies>
 </project>
