--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,11 +1,11 @@
 
-pojoFullPackageName=com.incito.zhcs.data.typt
+pojoFullPackageName=com.incito.zhcs.tmp.data
 
-daoFullPackageName=com.incito.zhcs.service.typt.dao
+daoFullPackageName=com.incito.zhcs.tmp.dao
 
-serviceFullPackageName=com.incito.zhcs.service.typt
+serviceFullPackageName=com.incito.zhcs.tmp.service
 
-webActionFullPackageName=com.incito.zhcs.web.typt
+webActionFullPackageName=com.incito.zhcs.tmp.web.action
 
 #IDataCollection
 idataCollectionPackageName=com.incito.zhcs.data.paging
