--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,11 +1,21 @@
 
-pojoFullPackageName=com.incito.zhcs.tmp.data
+#pojoFullPackageName=com.incito.zhcs.tmp.data
+#
+#daoFullPackageName=com.incito.zhcs.tmp.dao
+#
+#serviceFullPackageName=com.incito.zhcs.tmp.service
+#
+#webActionFullPackageName=com.incito.zhcs.tmp.web.action
 
-daoFullPackageName=com.incito.zhcs.tmp.dao
+pojoFullPackageName=com.incito.zhcs.service.user.data
 
-serviceFullPackageName=com.incito.zhcs.tmp.service
+daoFullPackageName=com.incito.zhcs.service.user.dao
 
-webActionFullPackageName=com.incito.zhcs.tmp.web.action
+serviceFullPackageName=com.incito.zhcs.service.user.service
+
+webActionFullPackageName=com.incito.zhcs.web.user
+
+#cateGoryMappingPath=zhcs/zhcsgl
 
 #IDataCollection
 idataCollectionPackageName=com.incito.zhcs.data.paging
