--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,19 +1,19 @@
 
-#pojoFullPackageName=com.incito.zhcs.tmp.data
+pojoFullPackageName=com.incito.zhcs.tmp.data
+
+daoFullPackageName=com.incito.zhcs.tmp.dao
+
+serviceFullPackageName=com.incito.zhcs.tmp.service
+
+webActionFullPackageName=com.incito.zhcs.tmp.web.action
+
+#pojoFullPackageName=com.incito.zhcs.service.user.data
 #
-#daoFullPackageName=com.incito.zhcs.tmp.dao
+#daoFullPackageName=com.incito.zhcs.service.user.dao
 #
-#serviceFullPackageName=com.incito.zhcs.tmp.service
+#serviceFullPackageName=com.incito.zhcs.service.user.service
 #
-#webActionFullPackageName=com.incito.zhcs.tmp.web.action
-
-pojoFullPackageName=com.incito.zhcs.service.user.data
-
-daoFullPackageName=com.incito.zhcs.service.user.dao
-
-serviceFullPackageName=com.incito.zhcs.service.user.service
-
-webActionFullPackageName=com.incito.zhcs.web.user
+#webActionFullPackageName=com.incito.zhcs.web.user
 
 #cateGoryMappingPath=zhcs/zhcsgl
 
@@ -37,6 +37,9 @@ businessExceptionPackageName=com.incito.zhcs.exception
 
 #IErrorCode
 ierrorCodePackageName=com.incito.zhcs.exception
+
+#CollectionHelper
+defaultCollectionHelperPackageName=com.incito.zhcs.util
 
 
 
