提交ui新规划

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,10 +1,14 @@
+## powered by paddingdun 
+## gen code rule config
+##
+
+database=mysql5
+daoMethod=ibatis/2.0
+
 
 pojoFullPackageName=com.incito.zhcs.tmp.data
-
 daoFullPackageName=com.incito.zhcs.tmp.dao
-
 serviceFullPackageName=com.incito.zhcs.tmp.service
-
 webActionFullPackageName=com.incito.zhcs.tmp.web.action
 
 #pojoFullPackageName=com.incito.zhcs.service.user.data
