--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -6,15 +6,15 @@ database=mysql5
 daoMethod=ibatis/2.0
 
 
-#pojoFullPackageName=com.incito.zhcs.tmp.data
-#daoFullPackageName=com.incito.zhcs.tmp.dao
-#serviceFullPackageName=com.incito.zhcs.tmp.service
-#webActionFullPackageName=com.incito.zhcs.tmp.web.action
+pojoFullPackageName=com.incito.zhcs.tmp.data
+daoFullPackageName=com.incito.zhcs.tmp.dao
+serviceFullPackageName=com.incito.zhcs.tmp.service
+webActionFullPackageName=com.incito.zhcs.tmp.web.action
 
-pojoFullPackageName=com.incito.zhcs.service.zhcsgl.data
-daoFullPackageName=com.incito.zhcs.service.zhcsgl.dao
-serviceFullPackageName=com.incito.zhcs.service.zhcsgl.service
-webActionFullPackageName=com.incito.zhcs.web.zhcsgl
+#pojoFullPackageName=com.incito.zhcs.service.zhcsgl.data
+#daoFullPackageName=com.incito.zhcs.service.zhcsgl.dao
+#serviceFullPackageName=com.incito.zhcs.service.zhcsgl.service
+#webActionFullPackageName=com.incito.zhcs.web.zhcsgl
 #pojoFullPackageName=com.incito.zhcs.service.user.data
 #
 #daoFullPackageName=com.incito.zhcs.service.user.dao
