修正mybatis文件生成

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -5,11 +5,16 @@
 database=mysql5
 daoMethod=ibatis/2.0
 
+pojoFullPackageName=me.paddingdun.data
+daoFullPackageName=me.paddingdun.dao
+serviceFullPackageName=me.paddingdun.service
+webActionFullPackageName=me.paddingdun.web.action
 
-pojoFullPackageName=com.incito.zhcs.tmp.data
-daoFullPackageName=com.incito.zhcs.tmp.dao
-serviceFullPackageName=com.incito.zhcs.tmp.service
-webActionFullPackageName=com.incito.zhcs.tmp.web.action
+
+#pojoFullPackageName=com.incito.zhcs.tmp.data
+#daoFullPackageName=com.incito.zhcs.tmp.dao
+#serviceFullPackageName=com.incito.zhcs.tmp.service
+#webActionFullPackageName=com.incito.zhcs.tmp.web.action
 
 #pojoFullPackageName=com.incito.zhcs.service.zhcsgl.data
 #daoFullPackageName=com.incito.zhcs.service.zhcsgl.dao
@@ -25,29 +30,32 @@ webActionFullPackageName=com.incito.zhcs.tmp.web.action
 
 #cateGoryMappingPath=zhcs/zhcsgl
 
+#BaseCtrl
+baseCtrlPackageName=me.paddingdun.web.action
+
 #IDataCollection
-idataCollectionPackageName=com.incito.zhcs.data.paging
+idataCollectionPackageName=me.paddingdun.data.paging
 
 #DefaultListDataCollection
-defaultListDataCollectionPackageName=com.incito.zhcs.data.paging.impl
+defaultListDataCollectionPackageName=me.paddingdun.data.paging.impl
 
 #Paging
-pagingPackageName=com.incito.zhcs.data.paging
+pagingPackageName=me.paddingdun.data.paging
 
 #GsonHelper
-gsonHelperPackageName=com.incito.zhcs.util
+gsonHelperPackageName=me.paddingdun.util
 
 #JsonResult2
-jsonResultPackageName=com.incito.zhcs.data.json
+jsonResultPackageName=me.paddingdun.data.json
 
 #BusinessException
-businessExceptionPackageName=com.incito.zhcs.exception
+businessExceptionPackageName=me.paddingdun.exception
 
 #IErrorCode
-ierrorCodePackageName=com.incito.zhcs.exception
+ierrorCodePackageName=me.paddingdun.exception
 
 #CollectionHelper
-defaultCollectionHelperPackageName=com.incito.zhcs.util
+defaultCollectionHelperPackageName=me.paddingdun.util
 
 
 
