由于和实体关联的配置放在了model中,导致在切换实体的时候,不能变化属性的值,从而发生action中的映射和页面的值发生重复!修正该问题

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -5,57 +5,39 @@
 database=mysql5
 daoMethod=ibatis/2.0
 
-pojoFullPackageName=me.paddingdun.data
-daoFullPackageName=me.paddingdun.dao
-serviceFullPackageName=me.paddingdun.service
-webActionFullPackageName=me.paddingdun.web.action
+pojoFullPackageName=com.yj.data
+daoFullPackageName=com.yj.dao
+serviceFullPackageName=com.yj.service
+webActionFullPackageName=com.yj.web.action
 
+#jspWebinfAfterDir=zhcs/zhcsgl
 
-#pojoFullPackageName=com.incito.zhcs.tmp.data
-#daoFullPackageName=com.incito.zhcs.tmp.dao
-#serviceFullPackageName=com.incito.zhcs.tmp.service
-#webActionFullPackageName=com.incito.zhcs.tmp.web.action
-
-#pojoFullPackageName=com.incito.zhcs.service.zhcsgl.data
-#daoFullPackageName=com.incito.zhcs.service.zhcsgl.dao
-#serviceFullPackageName=com.incito.zhcs.service.zhcsgl.service
-#webActionFullPackageName=com.incito.zhcs.web.zhcsgl
-#pojoFullPackageName=com.incito.zhcs.service.user.data
-#
-#daoFullPackageName=com.incito.zhcs.service.user.dao
-#
-#serviceFullPackageName=com.incito.zhcs.service.user.service
-#
-#webActionFullPackageName=com.incito.zhcs.web.user
-
-#cateGoryMappingPath=zhcs/zhcsgl
-
-#BaseCtrl
-baseCtrlPackageName=me.paddingdun.web.action
+#BaseCtrl package
+baseCtrlPackageName=com.yj.web.action
 
 #IDataCollection
-idataCollectionPackageName=me.paddingdun.data.paging
+idataCollectionPackageName=com.yj.data.paging
 
 #DefaultListDataCollection
-defaultListDataCollectionPackageName=me.paddingdun.data.paging.impl
+defaultListDataCollectionPackageName=com.yj.data.paging.impl
 
 #Paging
-pagingPackageName=me.paddingdun.data.paging
+pagingPackageName=com.yj.data.paging
 
 #GsonHelper
-gsonHelperPackageName=me.paddingdun.util
+gsonHelperPackageName=com.yj.util
 
 #JsonResult2
-jsonResultPackageName=me.paddingdun.data.json
+jsonResultPackageName=com.yj.data.json
 
 #BusinessException
-businessExceptionPackageName=me.paddingdun.exception
+businessExceptionPackageName=com.yj.exception
 
 #IErrorCode
-ierrorCodePackageName=me.paddingdun.exception
+ierrorCodePackageName=com.yj.exception
 
 #CollectionHelper
-defaultCollectionHelperPackageName=me.paddingdun.util
+defaultCollectionHelperPackageName=com.yj.util
 
 
 
