--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -8,9 +8,10 @@
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 driverClassName=com.mysql.jdbc.Driver
 validationQuery=SELECT 1
-jdbc_url=jdbc:mysql://localhost:3306/ssh2?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-jdbc_username=root
-jdbc_password=root
+#jdbc_url=jdbc:mysql://121.42.197.103:3306/jiaobang?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+jdbc_url=jdbc:mysql://localhost:3306/jiaobang?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+jdbc_username=jiaobang01
+jdbc_password=jiaobang01
 
 #hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 #driverClassName=net.sourceforge.jtds.jdbc.Driver
