修正主键未在jsp页面中的编辑输出显示; 增加了控制jsp头和尾的输出控制

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -11,6 +11,7 @@ serviceFullPackageName=com.yj.service
 webActionFullPackageName=com.yj.web.action
 
 #jspWebinfAfterDir=zhcs/zhcsgl
+#jspFulled=false
 
 #BaseCtrl package
 baseCtrlPackageName=com.yj.web.action
