mybatis3.0中注释掉了xml的vm中的notInSetUpdateSql属性;

--- a/pom.xml
+++ b/pom.xml
@@ -199,6 +199,13 @@
 	      <artifactId>dom4j</artifactId>    
 	      <version>1.6.1</version>   
 	    </dependency>
+	    
+	    <!-- sql 解析器 -->
+	    <dependency>
+		    <groupId>com.github.jsqlparser</groupId>
+		    <artifactId>jsqlparser</artifactId>
+		    <version>0.9</version>
+		</dependency>
         
   </dependencies>
 </project>
