增加权限代码生成

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -5,40 +5,40 @@
 database=mysql5
 daoMethod=ibatis/2.0
 
-pojoFullPackageName=com.yj.data
-daoFullPackageName=com.yj.dao
-serviceFullPackageName=com.yj.service
-webActionFullPackageName=com.yj.web.action
+pojoFullPackageName=me.paddingdun.data
+daoFullPackageName=me.paddingdun.dao
+serviceFullPackageName=me.paddingdun.service
+webActionFullPackageName=me.paddingdun.web.action
 
 #jspWebinfAfterDir=zhcs/zhcsgl
-#jspFulled=false
+jspFulled=true
 
 #BaseCtrl package
-baseCtrlPackageName=com.yj.web.action
+baseCtrlPackageName=me.paddingdun.web.action
 
 #IDataCollection
-idataCollectionPackageName=com.yj.data.paging
+idataCollectionPackageName=me.paddingdun.data.paging
 
 #DefaultListDataCollection
-defaultListDataCollectionPackageName=com.yj.data.paging.impl
+defaultListDataCollectionPackageName=me.paddingdun.data.paging.impl
 
 #Paging
-pagingPackageName=com.yj.data.paging
+pagingPackageName=me.paddingdun.data.paging
 
 #GsonHelper
-gsonHelperPackageName=com.yj.util
+gsonHelperPackageName=me.paddingdun.util
 
 #JsonResult2
-jsonResultPackageName=com.yj.data.json
+jsonResultPackageName=me.paddingdun.data.json
 
 #BusinessException
-businessExceptionPackageName=com.yj.exception
+businessExceptionPackageName=me.paddingdun.exception
 
 #IErrorCode
-ierrorCodePackageName=com.yj.exception
+ierrorCodePackageName=me.paddingdun.exception
 
 #CollectionHelper
-defaultCollectionHelperPackageName=com.yj.util
+defaultCollectionHelperPackageName=me.paddingdun.util
 
 
 
