--- a/pom.xml
+++ b/pom.xml
@@ -207,5 +207,13 @@
 		    <version>0.9</version>
 		</dependency>
         
+        
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-email -->
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-email</artifactId>
+		    <version>1.4</version>
+		</dependency>
+        
   </dependencies>
 </project>
