--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,15 @@
   		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>4.2.5</version>
+			<version>4.5</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpmime</artifactId>
+			<version>4.5</version>
+		</dependency>
+	
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
@@ -214,6 +221,20 @@
 		    <artifactId>commons-email</artifactId>
 		    <version>1.4</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>4.3.5.Final</version>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/oro/oro -->
+		<dependency>
+		    <groupId>oro</groupId>
+		    <artifactId>oro</artifactId>
+		    <version>2.0.8</version>
+		</dependency>
+		
         
   </dependencies>
 </project>
