--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -8,8 +8,16 @@
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 driverClassName=com.mysql.jdbc.Driver
 validationQuery=SELECT 1
-#jdbc_url=jdbc:mysql://121.42.197.103:3306/jiaobang?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-jdbc_url=jdbc:mysql://localhost:3306/jiaobang?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+#jdbc_url=jdbc:mysql://106.14.34.13:3306/xjyl?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+#jdbc_url=jdbc:mysql://localhost:3306/xjyl?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+#jdbc_username=jiaobang01
+#jdbc_password=jiaobang01
+
+#jdbc_url=jdbc:mysql://210.51.190.206:33306/xy_zcdj?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true&useSSL=false
+#jdbc_username=root
+#jdbc_password=123abc
+
+jdbc_url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true&useSSL=false
 jdbc_username=jiaobang01
 jdbc_password=jiaobang01
 
