--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,8 +2,8 @@
 ## gen code rule config
 ##
 
-database=mysql5
-daoMethod=ibatis/2.0
+database=oracle
+daoMethod=mybatis/3.0
 
 pojoFullPackageName=me.paddingdun.data
 daoFullPackageName=me.paddingdun.dao
@@ -12,6 +12,9 @@ webActionFullPackageName=me.paddingdun.web.action
 
 #jspWebinfAfterDir=zhcs/zhcsgl
 jspFulled=true
+
+#LogHelper
+logHelperPackageName=me.paddingdun.util
 
 #BaseCtrl package
 baseCtrlPackageName=me.paddingdun.web.action
