--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -1,13 +1,13 @@
-#hibernate.dialect=org.hibernate.dialect.OracleDialect
-#driverClassName=oracle.jdbc.driver.OracleDriver
-#validationQuery=SELECT 1 FROM DUAL
-#jdbc_url=jdbc:oracle:thin:@127.0.0.1:1521:orcl
-#jdbc_username=gacl
-#jdbc_password=xdp
+hibernate.dialect=org.hibernate.dialect.OracleDialect
+driverClassName=oracle.jdbc.driver.OracleDriver
+validationQuery=SELECT 1 FROM DUAL
+jdbc_url=jdbc:oracle:thin:@127.0.0.1:1521:xe
+jdbc_username=xymh
+jdbc_password=123456
 
-hibernate.dialect=org.hibernate.dialect.MySQLDialect
-driverClassName=com.mysql.jdbc.Driver
-validationQuery=SELECT 1
+#hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#driverClassName=com.mysql.jdbc.Driver
+#validationQuery=SELECT 1
 #jdbc_url=jdbc:mysql://106.14.34.13:3306/xjyl?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 #jdbc_url=jdbc:mysql://localhost:3306/xjyl?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 #jdbc_username=jiaobang01
@@ -17,9 +17,9 @@ validationQuery=SELECT 1
 #jdbc_username=root
 #jdbc_password=123abc
 
-jdbc_url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true&useSSL=false
-jdbc_username=jiaobang01
-jdbc_password=jiaobang01
+#jdbc_url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true&useSSL=false
+#jdbc_username=jiaobang01
+#jdbc_password=jiaobang01
 
 #hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 #driverClassName=net.sourceforge.jtds.jdbc.Driver
