--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,16 +2,16 @@
 ## gen code rule config
 ##
 
-database=oracle
+database=mysql
 daoMethod=mybatis/3.0
 
-pojoFullPackageName=me.paddingdun.data
-daoFullPackageName=me.paddingdun.dao
-serviceFullPackageName=me.paddingdun.service
-webActionFullPackageName=me.paddingdun.web.action
+#pojoFullPackageName=me.paddingdun.data
+#daoFullPackageName=me.paddingdun.dao
+#serviceFullPackageName=me.paddingdun.service
+#webActionFullPackageName=me.paddingdun.web.action
 
-#jspWebinfAfterDir=zhcs/zhcsgl
-jspFulled=true
+jspWebinfAfterDir=
+#jspFulled=true
 
 #LogHelper
 logHelperPackageName=me.paddingdun.util
@@ -42,6 +42,15 @@ ierrorCodePackageName=me.paddingdun.exception
 
 #CollectionHelper
 defaultCollectionHelperPackageName=me.paddingdun.util
+
+#BaseMapper
+baseMapperPackageName=me.paddingdun.dao
+
+#BaseService
+baseServicePackageName=me.paddingdun.service
+
+#IBaseService
+ibaseServicePackageName=me.paddingdun.service
 
 
 
